implementation_level/k8s/tea-store/image/ls_service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ls-algorithm-image
spec:
  selector:
    matchLabels:
      app: ls-algorithm-image
  template:
    metadata:
      labels:
        app: ls-algorithm-image
    spec:
      serviceAccountName: scaler-service-account
      containers:
        - name: ls-algorithm
          image: giovaz94/tea-store-ls
          imagePullPolicy: Always
          ports:
            - containerPort: 7003
---
apiVersion: v1
kind: Service
metadata:
  name: ls-algorithm-image-service
spec:
  selector:
    app: ls-algorithm-image
  ports:
    - protocol: TCP
      port: 7003
      targetPort: 7003
