implementation_level/k8s/tea-store/image/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image
spec:
  replicas: 2
  selector:
    matchLabels:
      type: image-type
  template:
    metadata:
      labels:
        type: image-type

    spec:
      containers:
        - name: image
          image: giovaz94/tea-store-general 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: image-service
  labels:
    type: image-service-type
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "80"
      prometheus.io/path: "/metrics"
spec:
  selector:
    type: image-type
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: image-service
spec:
  host: image-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: image-service
spec:
  hosts:
    - image-service
  http:
    - route:
        - destination:
            host: image-service
